# BUAS-Intake

./: .gitignore
Game/: Game.sln  README.txt
Game/Game/: Game.cpp  Game.vcxproj  README.txt
Game/Game/headers/: Bullet.h  Squorb.h  Tower.h
Game/Game/shaders/: metaballs.frag
Game/Game/x64/Debug/: Game.exe.recipe  Game.vcxproj.FileListAbsolute.txt
Game/Game/x64/Release/: Game.exe.recipe  Game.vcxproj.FileListAbsolute.txt
Game/LevelBuilder/: LevelBuilder.cpp  LevelBuilder.vcxproj  LevelBuilder.vcxproj.filters  README.txt
Game/LevelBuilder/x64/Debug/: LevelBuilder.exe.recipe  levelbuilder.new.obj.enc
Game/levels/: testLevel.json
GameCmake/: CMakeLists.txt
GameCmake/data/: shader.frag
GameCmake/src/: main.cpp
Tests/C++ Fast Track for Games Programming/: C++ Fast Track for Games Programming.sln
Tests/C++ Fast Track for Games Programming/Getting Started/: Getting Started.vcxproj  main.cpp
Tests/C++ Fast Track for Games Programming/Getting Started/x64/Debug/: Getting Started.exe.recipe
Tests/TheTemplate/: game.cpp  game.h
Tests/TheTemplate/Debug/: tmpl_2019-08_x64_debug.exe.recipe
